mono-basic (2.6.2-1) UNRELEASED; urgency=low

  * New upstream release
  * debian/control:
    + No-change bump to Standards 3.8.4

 -- Jo Shields <directhex@apebox.org>  Mon, 12 Apr 2010 23:30:34 +0100

mono-basic (2.4.2-2) unstable; urgency=low

  * debian/control:
    + No-change bump to Standards 3.8.3
    + Tweak build-deps to use new libmono-cil-dev package instead of
      individually named libs

 -- Jo Shields <directhex@apebox.org>  Wed, 06 Jan 2010 21:05:33 +0000

mono-basic (2.4.2-1) unstable; urgency=low

  * New upstream release
  * debian/control:
    + No-change bump to Standards 3.8.2
  * debian/rules:
    + Fix get-orig-source rule to produce consistent md5sums

 -- Jo Shields <directhex@apebox.org>  Tue, 30 Jun 2009 12:56:40 +0100

mono-basic (2.4-1) unstable; urgency=low

  * New upstream release
  * Dropping +dfsg, only documented bootstrap binaries remain
  * debian/control:
    + No-change bump to standards version 3.8.1
  * debian/man/vbnc.1,
    debian/mono-vbnc.manpages:
    + Drop bundled manpage, upstream finally include it

 -- Jo Shields <directhex@apebox.org>  Wed, 29 Apr 2009 01:03:25 +0100

mono-basic (2.0+dfsg-1) unstable; urgency=low

  [ Jo Shields ]
  * New upstream release
  * debian/control:
    + Bump standards version
    + Change sloppy build-dependencies to exact dependencies
    + Bump version of Mono required to build up to 1.9 or so
  * debian/rules:
    + Bumped clilibs to 2.0
    + Remove vbnc/vbnc/tests/Errors/2017-aspnet1.vb from list
      of files to +dfsg - it has been blanked out by upstream

  [ Mirco Bauer ]
  * debian/control:
    + Added Homepage, Vcs-Browser and Vcs-Svn fields.

 -- Jo Shields <directhex@apebox.org>  Thu, 16 Oct 2008 10:01:18 +0100

mono-basic (1.9+dfsg-3) unstable; urgency=low

  * debian/control:
    + Clean dbg-package-missing-depends lintian error by explicitly
      making the dbg package depend on identical versions of the